@@ -1,3 +1,11 @@
+2010-06-17  Tristan Gingold  <gingold@adacore.com>
+
+	* Makefile.am (BFD32_BACKENDS_CFILES): Move vms-alpha.c to ...
+	(BFD64_BACKENDS_CFILES): ... here.
+	(BFD32_BACKENDS): Move vms-alpha.lo to ...
+	(BFD64_BACKENDS): ... here.
+	* Makefile.in: Regenerate.
+
 2010-06-15  Joseph Myers  <joseph@codesourcery.com>
 
 	* elf-bfd.h (LEAST_KNOWN_OBJ_ATTRIBUTE): Decrease to 2.
